--- a/Section3_Spatial_Dataviz.Rmd
+++ b/Section3_Spatial_Dataviz.Rmd
@@ -4,7 +4,7 @@ Fundamentals of Spatial Data Visualisation
 
 Good maps depend on sound analysis and can have an enormous impact on the understanding and communication of results. It has never been easier to produce a map. The underlying data required are available in unprecedented volumes and the technological capabilities of transforming them into compelling maps and graphics are increasingly sophisticated and straightforward to use. Data and software, however, only offer the starting points of good spatial data visualisation since they need to be refined and calibrated by the researchers seeking to communicate their findings.  In this section we will run through the features of a good map. We will then seek to emulate them with R in Section XX. It is worth noting that not all good maps and graphics contain all the features below – they should simply be seen as suggestions rather than firm principles.
 
-Effective map making is hard process – as Krygier and Wood (XXX) put it “there is a lot to see, think about, and do” (p6). It often comes at the end of a period of intense data analysis and perhaps when the priority is to get a paper finished or results published and can therefore be rushed as a result. The beauty of R (and other scripting languages) is the ability to save code and simply re-run it with different data. Colours, map adornments and other parameters can therefore be quickly applied, so it is well worth creating a template script that adheres to best practice.
+Effective map making is hard process – as Krygier and Wood (2011) put it “there is a lot to see, think about, and do” (p6). It often comes at the end of a period of intense data analysis and perhaps when the priority is to get a paper finished or results published and can therefore be rushed as a result. The beauty of R (and other scripting languages) is the ability to save code and simply re-run it with different data. Colours, map adornments and other parameters can therefore be quickly applied, so it is well worth creating a template script that adheres to best practice.
 
 We have selected ggplot2 as our package of choice for the bulk of our maps and spatial data visualisations because it has a number of these elements at its core. The “gg” in its slightly odd name stands for “Grammar of Graphics”, which is a set of rules developed by Leland Wilkinson (2005) in a book of the same name. Grammar in the context of graphics works in much the same way as it does in language - it provides a structure. The structure is informed by both human perception and also mathematics to ensure that the resulting visualisations are both technically sound and comprehensible. By creating ggplot2, Hadley Wickham, implemented these rules as well as developing ways in which plots can be built up in layers (see Wickham, 2010). This layering component is especially useful in the context of spatial data since it is conceptually the same as map layers in Geographical Information Systems (GIS).
 
@@ -125,21 +125,28 @@ library(classInt)
 nbrks<- 6
 
 #Here quantiles are used to identify the breaks (note that we are using the original "wrld.rob" object and not the "wrld.rob@data$pop_est.f"). USe the help files to see the full range of options.
-brks<-classIntervals(wrld.rob@data$pop_est, n=nbrks, style="quantiles")
+brks<-classIntervals(wrld.rob@data$pop_est, n=nbrks, style="quantile")
 
 print(brks)
 
-#Now the breaks can be easily inserted into the code above.
-map+scale_fill_gradientn(colours=brewer.pal(nbrks,"YlGn"), breaks=c(brks$brks))
+#Now the breaks can be easily inserted into the code above for a range of colour palettes
+YlGn<-map+scale_fill_gradientn(colours=brewer.pal(nbrks,"YlGn"), breaks=c(brks$brks))
 
-#If you are not happy with the automatic methods of specify breaks this can be done manually (the colour palette has also been changed below).
+PuBu<-map+scale_fill_gradientn(colours=brewer.pal(nbrks,"PuBu"), breaks=c(brks$brks))
 
+grid.arrange(YlGn, PuBu, ncol=2)
+```
+
+If you are not happy with the automatic methods of specifying breaks it can also be done manually:
+
+```{r}
 nbrks<-4
 brks<- c(100000000,250000000,50000000,1000000000)
 
 map+scale_fill_gradientn(colours=brewer.pal(nbrks,"PuBu"), breaks=c(brks))
 
 ```
+
 There are many other ways to specify and alter the colours in ggplot2 and these are outlined in the help documentation. There are also many examples online.
 
 If the map's purpose is to clearly communicate data then it is often advisable to conform to conventions so as not to disorientate readers to ensure they can focus on the key messages contained in the data. A good example of this is the use of blue for bodies of water and green for landmasses. The code example below generates two plots with our wrld.pop.f object. The first colours the land blue and the sea (in this case the background to the map) green and the second is more conventional. We use the "grid.arrange" function from the "gridExtra" package to display the maps side by side.
@@ -172,7 +179,7 @@ thick<-map3+ geom_polygon(fill="dark green", colour="black", lwd=1.5)
 grid.arrange(yellow, black,thick, thin, ncol=2)
 ```
 
-There are other parameters such as layer transparency that can be applied to all aspects of the plot - both points, lines and polygons - that we will reference in later examples in this tutorial.
+There are other parameters such as layer transparency (use the `alpha` parameter for this) that can be applied to all aspects of the plot - both points, lines and polygons. Space does not permit their full exploration here but more information is available from the many online examples and the `ggplot2` package documentation.
 
 Map Adornments and Annotations
 ==============================
@@ -204,44 +211,44 @@ ggplot() + geom_polygon(data = wrld.pop.f, aes(long, lat, group = group, fill = 
 ```
 
 #Scale bar
+`ggplot2's` scale bar capabilities are perhaps the least satisfactory element of the package. For this example we use the `geom_line()` function to draw a line of approximately 1km in length using the `lnd.f` object containing the London Boroughs discussed in Section 2. The reason for this is that it is in a projected coordinate system - British National Grid - so each map unit is worth 1m. In the case of the world map the distances at the equator east to west are very different from those further north or south. Any line drawn using the the simple approach below would therefore be inaccurate. For maps covering large areas - such as the entire world - leaving the axis labels on will enable them to act as a graticule which will indicate distance. 
 
 ```{r}
-ggplot() + geom_polygon(data = wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) + 
-  geom_line(aes(x = c(-0.85e+07, -1.75e+07), y = c(-5e+06, -5e+06)), lwd=2) + annotate("text",label="1000km",x=-1.3e+07,y=-4e+06) +coord_fixed() # correct aspect ratio
+ggplot() + geom_polygon(data = lnd.f, aes(long, lat, group = group)) + 
+  geom_line(aes(x = c(505000,515000), y = c(158000, 158000)), lwd=2) + annotate("text",label="10km",x=510000,y=160000) +coord_fixed() 
 ```
-
 
 #Legends
 
-theme(legend.position="top")
+Legends are added automatically but can be customised in a number of ways. A few examples are included below with more details avaialble in the `ggplot2` documentation. 
 
+```{r}
+#Position
+map+theme(legend.position="top")
 
+#Title
+map+theme(legend.title = element_text(colour="Red", size=16, face="bold"))
 
-There is an almost infinite number of different combinations of the above parameters so take inspiration from maps and graphics you have seen and liked. The process is an iterative one, it will take multiple attempts to get right. Show your map to friends and colleagues- all will have an opinion but don’t be afraid to stand by the decisions you have taken. To give your maps a final polish you may wish to export them as a pdf using the `ggsave()` function and importing them into a vector graphics package such as Adobe Illustrator or Inkscape. 
+#Label Font Size and Colour
+map+theme(legend.text = element_text(colour="blue", size = 16, face = "italic"))
 
+#Border and background box
+map+ theme(legend.background = element_rect(fill="gray90", size=.5, linetype="dotted"))
 
+```
 
 Adding Basemaps To Your Plots
 =============================
-ggmap is a package that uses the ggplot2 syntax as a 
-template to create maps with image tiles from the likes of Google and OpenStreetMap:
+The development of the `ggmap` package has enabled the simple use of online mapping services such as Google Maps and OpenStreetMap for base maps. Using image tiles from these services spatial data can be placed in context as users can easily orientate themselves to streets and landmarks.
 
-```{r}
-library(ggmap) 
-```
-
-!!! adapt to the lnd.stations object.
-
-The sport object is in British National Grid but the ggmap 
-image tiles are in WGS84. We therefore need to use the lnd.wgs84 
-object created in the reprojection operation earlier. 
-
-The first job is to calculate the bounding box (bb for short) of the 
-lnd.wgs84 object to identify the geographic extent of the image tiles that we need. 
+For this example we are going to use the shapefile of London sports participation introduced in Section 2. The data were originally projected to British National Grid (BNG) which is not compatible with the online map services used in the following examples. It therefore needs reprojecting - a step we completed earlier. The reprojected file can be loaded as follows:
 
 ```{r, echo=FALSE}
 load("data/lnd.wgs84.RData")
-```
+``` 
+
+The first job is to calculate the bounding box (bb for short) of the 
+`lnd.wgs84` object to identify the geographic extent of the map. This information is used to request the appropriate map tiles from the map service of our choice. This process is conceptually the same as the size of your web browser or smartphone screen when using Google maps for navigation. The first line of code in the snippet below retrieves the bounding box and the two that follow add 5% so there is a little space around the edges of the data to be plotted.
 
 
 ```{r}
@@ -255,14 +262,12 @@ b[2, ] <- (b[2, ] - mean(b[2, ])) * 1.05 + mean(b[2, ])
 This is then fed into the `get_map` function as the location parameter. The syntax below contains 2 functions. `ggmap` is required to produce the plot and provides the base map data.
 
 ```{r, message=FALSE}
-library(ggmap)
+library(ggmap) 
+
 lnd.b1 <- ggmap(get_map(location = b))
 ```
 
-In much the same way as we did above we can then layer the plot with different geoms. 
-
-First fortify the lnd.wgs84 object and then merge with the required attribute
-data (we already did this step to create the sport.f object).
+`ggmap` follows the same syntax structures as ggplot2 and so can easily be integrated with the other examples included here. First fortify the lnd.wgs84 object and then merge with the required attribute data.
 
 ```{r}
 lnd.wgs84.f <- fortify(lnd.wgs84, region = "ons_label")
@@ -270,8 +275,7 @@ lnd.wgs84.f <- merge(lnd.wgs84.f, lnd.wgs84@data,
                       by.x = "id", by.y = "ons_label")
 ```
 
-
-We can now overlay this on our base map.
+We can now overlay this on our base map using the `geom_polugon() function.
 
 ```{r, eval=FALSE}
 lnd.b1 + 
@@ -280,14 +284,13 @@ lnd.b1 +
                alpha = 0.5)
 ```
 
-The code above contains a lot of parameters. Use the ggplot2 help pages to find out what they are. 
-The resulting map looks okay, but it would be improved with a simpler base map in black and white. 
+The resulting map looks reasonable, but it would be improved with a simpler base map in black and white. 
 A design firm called stamen provide the tiles we need and they can be brought into the 
 plot with the `get_map` function:
 
 ```{r}
 lnd.b2 <- ggmap(get_map(location = b, source = "stamen", 
-                        maptype = "toner", crop = T))
+                        maptype = "toner", crop = T)) #note the addition of the maptype parameter.
 ```
 
 We can then produce the plot as before.
@@ -309,9 +312,12 @@ lnd.b3 +
                aes(x = long, y = lat, group = group, fill = Partic_Per), 
                alpha = 0.5)
 ```
+Spatial polygons are not the only data types compatible with `ggmap`- you can use any plot type and set of parameters available in `ggplot2`, making it an ideal companion package for spatial data visualisation. 
 
 Summary
 =======
+
+There is an almost infinite number of different combinations colours, adornments and line widths that could be applied to a map so take inspiration from maps and graphics you have seen and liked. The process is an iterative one, it will take multiple attempts to get right. Show your map to friends and colleagues- all will have an opinion but don’t be afraid to stand by the decisions you have taken. To give your maps a final polish you may wish to export them as a pdf using the `ggsave()` function and importing them into a vector graphics package such as Adobe Illustrator or Inkscape. 
 
 The beauty of producing maps in a programming environment as opposed to the GUI offered by the majority of GIS software packages lies in the fact that each line of code can be easily adapted to a different dataset. Users can therefore create a series of scripts that act as templates and simply call them when required. This saves a huge amount of time and has the added advantage that all outputs will have a consistent style and thus offer more professional looking publications. 
 
