--- a/Section3_Spatial_Dataviz.Rmd
+++ b/Section3_Spatial_Dataviz.Rmd
@@ -1,4 +1,3 @@
-
 Fundamentals of Spatial Data Visualisation
 ==========================================
 
@@ -21,14 +20,8 @@ Set your working directory as before:
 setwd("C:/Users/Uname/Desktop/sdvwR")
 ```
 
-For this section we are going to use a map of the world to demonstrate some of the cartographic principles as they are introduced. A world map is available from the Natural Earth website. The code below will download this and save it to your working directory. It is commented out because the data may already be on your system. Uncomment each new line (by deleting the `#` symbol) if you need to download and extract the data.
-
-```{r, eval=FALSE}
-#download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto") # download file
-#unzip("ne_110m_admin_0_countries.zip", exdir = "data/")  # unzip to data folder
-#file.remove("ne_110m_admin_0_countries.zip") # remove zip file
-```
-Once downloaded we can then load the data into the R console. 
+For this section we are going to use a map of the world to demonstrate some of the cartographic principles as they are introduced. The world map used is available from the Natural Earth website. 
+Because these are already saved in the data folder, we can proceed to load the data. 
 
 ```{r}
 wrld <- readOGR("data/", "ne_110m_admin_0_countries")
@@ -43,7 +36,7 @@ head(wrld@data)[,1:5]
 
 You can see there are a lot of columns associated with this file. Although we will keep all of them, we are only really interested in the population estimate ("pop_est") field. Before progressing it is is worth reprojecting the data in order that the population data can be seen better. The coordinate reference system of the wrld shapefile is currently WGS84. This is the common latitude and longitude format that all spatial software packages understand. From a cartographic perspective the standard plots of this projection, of the kind produced above, are not suitable since they heavily distort the shapes of those countries further from the equator. Instead the Robinson projection provides a good compromise between areal distortion and shape preservation. We therefore project it as follows.
 
-```{r}
+```{r, message=FALSE}
 wrld.rob <- spTransform(wrld, CRS("+proj=robin"))
 plot(wrld.rob)
 ```
@@ -70,11 +63,11 @@ map<-ggplot(wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) +
 map
 ```
 
-# Colour
+## Colour and other aesthetics
 
 Colour has an enormous impact on how people will percieve a graphic. Readers of a map come to it with a range of pre-conceptions about how the world looks. 
 
-# Choropleth Maps
+### Choropleth Maps
 
 ggplot2 knows the different between continuous and categorical (nominal) data and will automatically assign the appropriate colour palettes when producing choropleth maps such as the one above. The default colour palettes are generally a good place to start but users may wish to vary them for a whole host of reasons, such as the need to print in black and white. The `scale_fill_` family of commands facilitate such customisation. For categorical data `scale_fill_manual()` is a useful command:
 
@@ -161,7 +154,7 @@ green <- map2 + geom_polygon(fill="dark green") + theme(panel.background = eleme
 grid.arrange(blue, green, ncol=2)
 ```
 
-## Experimenting with line colour and line widths
+### Experimenting with line colour and line widths
 
 In addition to conforming to colour conventions, line colour and width offer important parameters, which are often overlooked tools for increasing the legibility of a graphic. As the code below demonstrates, it is possible to adjust line colour through using the "colour" parameter and the line width using the "lwd" parameter. The impact of different line widths will vary depending on your screen size and resolution. If you save the plot to pdf (or an image) then the size at which you do this will also affect the line widths.
 
@@ -181,13 +174,13 @@ grid.arrange(yellow, black,thick, thin, ncol=2)
 
 There are other parameters such as layer transparency (use the `alpha` parameter for this) that can be applied to all aspects of the plot - both points, lines and polygons. Space does not permit their full exploration here but more information is available from the many online examples and the `ggplot2` package documentation.
 
-Map Adornments and Annotations
-==============================
+## Map Adornments and Annotations
+
 
 Map adornments and annotations are essential to orientate the viewer and provide context; they include graticules, north arrows, scale bars and data attribution. Not all are required on a single map, indeed it is often best that they are used sparingly to avoid unecessary clutter (Monkhouse and Wilkinson, 1971). With ggplot2 many of these are added automatically but they can be customised.
 
 
-#North arrow
+### North arrow
 
 In the maps created so far, we have defined the *aesthetics* of the map
 in the foundation function `ggplot`. The result of this is that all
@@ -210,15 +203,18 @@ ggplot() + geom_polygon(data = wrld.pop.f, aes(long, lat, group = group, fill = 
   coord_fixed() # correct aspect ratio
 ```
 
-#Scale bar
+### Scale bar
 `ggplot2's` scale bar capabilities are perhaps the least satisfactory element of the package. For this example we use the `geom_line()` function to draw a line of approximately 1km in length using the `lnd.f` object containing the London Boroughs discussed in Section 2. The reason for this is that it is in a projected coordinate system - British National Grid - so each map unit is worth 1m. In the case of the world map the distances at the equator east to west are very different from those further north or south. Any line drawn using the the simple approach below would therefore be inaccurate. For maps covering large areas - such as the entire world - leaving the axis labels on will enable them to act as a graticule which will indicate distance. 
 
+
+
 ```{r}
+load("data/lnd.f.RData")
 ggplot() + geom_polygon(data = lnd.f, aes(long, lat, group = group)) + 
   geom_line(aes(x = c(505000,515000), y = c(158000, 158000)), lwd=2) + annotate("text",label="10km",x=510000,y=160000) +coord_fixed() 
 ```
 
-#Legends
+### Legends
 
 Legends are added automatically but can be customised in a number of ways. A few examples are included below with more details avaialble in the `ggplot2` documentation. 
 
@@ -234,11 +230,11 @@ map+theme(legend.text = element_text(colour="blue", size = 16, face = "italic"))
 
 #Border and background box
 map+ theme(legend.background = element_rect(fill="gray90", size=.5, linetype="dotted"))
-
 ```
 
 Adding Basemaps To Your Plots
-=============================
+----------
+
 The development of the `ggmap` package has enabled the simple use of online mapping services such as Google Maps and OpenStreetMap for base maps. Using image tiles from these services spatial data can be placed in context as users can easily orientate themselves to streets and landmarks.
 
 For this example we are going to use the shapefile of London sports participation introduced in Section 2. The data were originally projected to British National Grid (BNG) which is not compatible with the online map services used in the following examples. It therefore needs reprojecting - a step we completed earlier. The reprojected file can be loaded as follows:
@@ -315,7 +311,7 @@ lnd.b3 +
 Spatial polygons are not the only data types compatible with `ggmap`- you can use any plot type and set of parameters available in `ggplot2`, making it an ideal companion package for spatial data visualisation. 
 
 Summary
-=======
+-----------------
 
 There is an almost infinite number of different combinations colours, adornments and line widths that could be applied to a map so take inspiration from maps and graphics you have seen and liked. The process is an iterative one, it will take multiple attempts to get right. Show your map to friends and colleagues- all will have an opinion but don’t be afraid to stand by the decisions you have taken. To give your maps a final polish you may wish to export them as a pdf using the `ggsave()` function and importing them into a vector graphics package such as Adobe Illustrator or Inkscape. 
 
